opam-version: "1.2"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "Romain Beauxis <toots@rastageeks.org>"
homepage: "https://github.com/toots/ocaml-osx-secure-transport"
bug-reports: "https://github.com/toots/ocaml-osx-secure-transport/issues"
license: "WTFPL"
dev-repo: "https://github.com/toots/ocaml-osx-secure-transport.git"
build: [
  ["oasis" "setup"]
  ["ocaml" "setup.ml" "-configure" "--prefix" prefix]
  ["ocaml" "setup.ml" "-build"]
]
install: ["ocaml" "setup.ml" "-install"]
remove: [
  ["ocamlfind" "remove" "osx-secure-transport"]
]
depends: [
  "ctypes" {>= "0.4"}
  "ctypes-foreign"
  "ocamlfind" {build}
  "oasis" {build}
]
available: [os = "darwin"]
