opam-version: "2.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "Romain Beauxis <toots@rastageeks.org>"
homepage: "https://github.com/toots/ocaml-osx-secure-transport"
bug-reports: "https://github.com/toots/ocaml-osx-secure-transport/issues"
license: "WTFPL"
dev-repo: "git+https://github.com/toots/ocaml-osx-secure-transport.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "ctypes" {>= "0.4"}
  "ctypes-foreign"
  "dune" {build}
]
available: os = "macos"
synopsis: "macos/ios SecureTransport TLS OSX implementation API for OCaml"
